--- a/WebsiteAssignmentFiles/list.html
+++ b/WebsiteAssignmentFiles/list.html
@@ -43,42 +43,45 @@
             .then(data => {
 
                 /*
-                This section creates the base table and finds the root json node.
+                This section creates the array of work experience
+                */
+                const workExperience = data[0]["Previous Work Experience"];
+               
+                /*
+                This section creates the table
                 */
                 var jsonTable = document.createElement("table");
-                var tr = jsonTable.insertRow(-1);   
                 jsonTable.style.width = "75%";
-                let root;
-                for (let prop in data) {
-                    root = prop;
-                }
+                jsonTable.style.margin = "auto";
 
                 /*
-                This section selects the headers for the table
+                This section creates the headers for the table
                 */
-                let headers = Object.keys(data[root][0]);
+                ar tr = jsonTable.insertRow(-1);
+                var headers = Object.keys(workExperience[0]);  // Extract headers from the first object in the array
                 headers.forEach(header => {
-                    var th = document.createElement("th");      
+                    var th = document.createElement("th");
                     th.innerHTML = header;
                     tr.appendChild(th);
-                })              
+                });            
                 /*
                 This section adds the data into each row of the list
                 */
-                let items = Object.keys(data[root]);
-                items.forEach(item => {
+                workExperience.forEach(item => {
                     tr = jsonTable.insertRow(-1);
-                    for (let key in data[root][item]) {
-                       var tabCell = tr.insertCell(-1);
-                       tabCell.innerHTML = data[root][item][key];
-                    }
-                })
+                    headers.forEach(header => {
+                        var tabCell = tr.insertCell(-1);
+                        tabCell.innerHTML = item[header];
+                    });
+                });
+
                 /*
                 This section adds the table to the HTML
                 */
-                var divContainer = document.getElementById("showDataJSON");
+                ar divContainer = document.getElementById("showDataJSON");
                 divContainer.innerHTML = "";
                 divContainer.appendChild(jsonTable);
-            });
+            })
+            .catch(error => console.error('Error loading JSON data:', error));
     </script>  
 </html>
