--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="masthead-subheading font-weight-light mb-0">UC Berkeley School of Information Masters Student</p>
             </div>
         </header>
-        <section class="text-center">
+        <section style="text-align: center; padding: 20px;">
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
