Updated the alignment and simplified webpage structure

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             </div>
         </header>
         <section style="text-align: center; padding: 20px;">
-
-            <div class="col-md-6 col-lg-4 mb-5">
+            <div style="max-width: 600px; margin: 0 auto;">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
                 <p>Hello! My name is Sarah Algashgari, and I am currently pursuing a masters degree at UC Berkeley School of Information. I was previously a Senior Consultant at Deloitte within the financial and regulatory risk advisory service line. I am looking to transition towards a career in tech and I am eager to learn more about the domains of data science, system design, and using technology to solve real-world problems. Welcome to my webpage!</p>
             </div>
