--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-line"></div>
                 </div>
+                 <!-- Adding the Image -->
+                 <img src="SG MIMS portrait.jpg" alt="My Picture" style="max-width: 300px; border-radius: 50%; margin: 20px auto;">
                 <!--This code creates the subheading underneath the line dividers-->
                 <p class="masthead-subheading font-weight-light mb-0">UC Berkeley School of Information Masters Student</p>
             </div>
